--- a/student-sites.html
+++ b/student-sites.html
@@ -112,3 +112,8 @@
       <a href='http://github.com/williev97'>GitHub Home Page</a><br>
       <a href='http://williev97.github.io'>GitHub Pages Site</a>
     </dd>
+<dt>Morgan Gill</dt>
+<dd>
+  <a href= 'https://github.com/mgill1234'>GitHub Home Page</a><br>
+  <a href='http://mgill1234.guithub.io'>GitHub Pages site</a>
+</dd>
